fix: add important to the vertical spacing of the latest news list items

--- a/website/src/components/page-latest-news/index.module.scss
+++ b/website/src/components/page-latest-news/index.module.scss
@@ -9,7 +9,7 @@
   }
 
   li:not(:last-of-type) {
-    margin-block-end: var(--spacing-4);
+    margin-block-end: var(--spacing-4) !important;
   }
 
   li a {
